Actualiza con nuevas instrucciones
Y como tenga que hacerlo otra vez voy a tener que montar algo

--- a/index.html
+++ b/index.html
@@ -57,7 +57,12 @@
 <pre><code>    cd ~
     git clone git@github.com:JJ/repo-plantilla.git
     mv repo-plantilla .git-template
-</code></pre>
+</code></pre><p>Si quieres quitar todos los ficheros que no sean estrictamente de la plantilla puedes borrarlos a mano antes de empezar a clonarlos, o bien usar la rama que ya los ha eliminado:</p>
+
+<p><code>cd ~
+	git clone git@github.com:JJ/repo-plantilla.git --branch instalar
+	mv repo-plantilla .git-template
+</code></p>
 
 <p>Y luego usarse con </p>
 
